2005-08-08  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (undo-in-progress): Define for XEmacs compatibility.
	Reported by Friedrich Dominicus.

2005-08-07  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Fix for the presentations menu.  Reported by Aleksandar Bakic.
	
	* present.lisp (lookup-presented-object): Handle ids that are
	conses. 
	(execute-menu-choice-for-presentation-id): Use equal for comparing
	ids, to handle the cons case.
	(menu-choices-for-presentation): Quote the presentation id, as it
	can be a cons.
	* slime.el (slime-presentation-menu, slime-presentation-menu) 
	(slime-inspect-presented-object): Quote the presentation id.

2005-08-06  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank.lisp (form-completion): New generic function, factored out
	from complete-form.
	(complete-form): Factor out form-completion.
	(form-completion): Specialize on defmethod forms to insert arglist
	of generic function.

	* doc/slime.texi (Programming Helpers): Document C-c C-s,
	slime-complete-form. 

2005-08-04  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Improvements to the presentations feature.  Parts of presentations
	can be copied reliably using all available Emacs facilities (not
	just kill-ring-save), and they are no longer "semi-readonly" (in
	the sense that keypresses are silently ignored).  Whenever a user
	attempts to edit a presentation, it now simply turns into plain
	text (which is indicated by changing the face); this can be
	undone.  Presentations are now also supported if
	*use-dedicated-output-stream* is nil.  It is now possible to
	access the individual values of multiple-value results.  For some
	systems (Allegro CL and upcoming CMUCL snapshots), presentations
	can be reliably printed through pretty-printing streams.
	
	* present.lisp (slime-stream-p) [allegro]: Allow printing
	presentations through pretty printing streams.
	[cmu]: Allow printing presentations through pretty printing